[package]
name = "pit"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/hhatto/pit-rs"
keywords = ["account", "management", "pit"]
readme = "README.md"
description = "pit in Rust"
documentation = "https://docs.rs/pit"
edition = "2018"

[dependencies]
yaml-rust = "0.4"
dirs = "2.0.1"

[[example]]
name = "hello"
path = "examples/hello_pit.rs"
